i18n/zh-Hans/docusaurus-plugin-content-docs/version-0.2.0/operations/commit.md
---
sidebar_position: 3
---

# 提交更改

创建提交，查看历史记录，并管理仓库状态。

## 快捷键

### 提交输入

| 按键        | 动作             |
| :---------- | :--------------- |
| `c`         | 提交             |
| `A`         | 修正提交 (Amend) |
| `ctrl+e`    | 提交             |
| `esc`       | 取消             |
| `tab`       | 下一个字段       |
| `shift+tab` | 上一个字段       |

### 提交日志与重置

| 按键    | 动作           |
| :------ | :------------- |
| `r`     | 重置选定的提交 |
| `R`     | 重置最新提交   |
| `enter` | 查看详情       |

## 工作流

### 创建提交

1.  **暂存**: 确保您已在 **修改的文件** 面板中暂存了文件。
2.  **触发**: 按 `c`。
3.  **弹窗**: **提交弹窗** 出现，包含两个字段：
    - **摘要**: 提交消息的第一行。
    - **描述**: 提交消息的详细正文。
4.  **输入**:
    - 输入您的摘要。
    - 按 `tab` 移动到描述（可选）。
5.  **提交**: 按 `ctrl+e`。
    - **为什么是 `ctrl+e`?**: 因为 `enter` 用于在描述字段中换行，所以使用 `ctrl+e` 来提交表单。

---

### 修正提交 (Amend)

1.  **触发**: 按 `A` (shift+a)。
2.  **弹窗**: **修正提交弹窗** 打开，预先填充了*上一次*提交的消息。
3.  **修改**: 编辑消息或直接提交以包含新暂存的文件。
4.  **提交**: 按 `ctrl+e`。

---

### 查看提交历史

1.  **导航**: 按 `3` 聚焦 **提交日志**。
2.  **图表**: 列表显示可视化的分支图和提交摘要。
3.  **详情**: **详细面板** (右侧) 显示完整的提交信息，包括：
    - 作者、日期、哈希
    - 完整消息
    - 统计摘要 (插入/删除)
    - **差异**: 该提交的完整文件更改。

---

### 重置提交

使用 `soft`、`mixed` 或 `hard` 重置来优化您的历史记录。

#### 重置最新提交

1.  **触发**: 在提交日志中按 `R` (shift+r)。
2.  **选择模式**:
    - **Soft**: 保留更改在暂存区。
    - **Mixed**: 保留更改在工作目录（未暂存）。
    - **Hard**: 丢弃所有更改。
3.  **确认**: 提示确认是否继续。

#### 重置到特定提交

1.  **选择**: 在日志中高亮显示目标提交。
2.  **触发**: 按 `r`。
3.  **选择模式**: 选择针对该提交的 Soft、Mixed 或 Hard 重置。
4.  **确认**: 继续重置。
